custom-apps/readarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: plex-support
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: readarr-config
                optional: false
          image: lscr.io/linuxserver/readarr:develop
          imagePullPolicy: Always
          name: readarr
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /books
              name: smb-books
            - mountPath: /downloads
              name: smb-downloads
            - mountPath: /config
              name: config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - persistentVolumeClaim:
            claimName: pvc-smb-readarr-books
          name: smb-books
        - persistentVolumeClaim:
            claimName: pvc-smb-readarr-downloads
          name: smb-downloads
        - persistentVolumeClaim:
            claimName: readarr-pvc-config
          name: config
